# examples/minimal-react/server/router.ts
@@ -1,10 +1,17 @@
 import { Ctx } from "@beff/hono";
 import { cors } from "hono/cors";
 export default {
-  "/greeting": {
+  "/*": {
     use: [cors()],
+  },
+  "/greeting": {
     get: (c: Ctx, name?: string): { text: string } => ({
       text: `Hello ${name ?? "world"}!`,
+    }),
+  },
+  "/sum": {
+    get: (c: Ctx, a: number, b: number): { result: number } => ({
+      result: a + b,
     }),
   },
 };
